--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.5.6",
     "prettier": "^2.4.1",
+    "tailwindcss": "^3.4.3",
     "typescript": "~4.5.5"
   }
 }
